# toast-os

./: Cargo.toml  LICENSE  README.md  x86_64-toast.json
.cargo/: config.toml
src/: main.rs  terminal.rs  test.rs
