[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.22"
volatile = "0.4.5"
spin = "0.9.4"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.4.0"
features = [ "spin_no_std" ]